--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "devtender",
   "version": "1.0.0",
   "description": "tinder for devs",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "node.js",
@@ -20,6 +20,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "socket.io": "^4.8.1",
     "validator": "^13.15.15"
   }
 }
